--- a/sample.html
+++ b/sample.html
@@ -7,6 +7,9 @@
 }
     </style>
   </head>
-
+<section>
+  <h3>this is sample html code </h3>
+  <p>welcome to html .hope everything is good  </p>
+</section>
   <p class="box">this is Lakshmi prasanna</p>
 </html>
